# spark-personality-chip-labs

./: .gitignore  README.md  SECURITY.md  pyproject.toml  spark-chip.json
docs/: BUILDER_BOUNDARY_2026-04-09.md  HANDOFF_2026-03-27.md  IB2_PERSONALITY_INTEGRATION.md
examples/: integrate_with_agent.py
personalities/: _template.personality.yaml  artemis.personality.yaml  echo.personality.yaml  forge.personality.yaml  founder-operator.personality.yaml
scripts/: personality_cli.py  test_hooks_live.py  validate_personality.py
src/personality_engine/: __init__.py  __main__.py  active.py  bridge.py  context.py  emotional_state.py  hooks.py  ib_connector.py  loader.py  nl_traits.py  observer.py  registry.py  room_reader.py  schema.py  spark_hook.py  storage.py
tests/: test_active.py  test_bridge.py  test_cli_flags.py  test_context.py  test_emotional_state.py  test_hooks.py  test_ib_connector.py  test_loader.py  test_loader_overlay_crash.py  test_logging.py  test_nl_traits.py  test_observer.py  test_personality_cli_script.py  test_personality_engine_main.py  test_registry.py  test_registry_atomic_write.py  test_room_reader.py  test_schema.py  test_spark_hook.py  test_spark_hook_narrow_exception.py  test_validate_personality_script.py
