[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-personality-chips"
version = "0.1.0"
description = "Modular personality chip system for Spark agents"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["personality_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
